# 4162-The-discord-bot

./: .breakpoints  759474157330366506.txt  855124766751064113.txt  OCR_manager.py  badwords.txt  constants.py  consts.py  file.txt  keep_alive.py  m.py  main.py  news.json  oauth.py  orc.py  prefixes.json  pyproject.toml  requirements.txt  tools.py  webhooks.py
Extra Extentions/: manager.json
bot/: music.py
bot_config/: blacklist.json
cogs/: 4162.py  578789460141932555.py  Main_cog.py  Tools.py  VLoader.py  VLoader2.py  act.py  gitsearch.py  homework.py  music.py  rtfm.py  yeah.py
jsons/: current_user.txt  data.json  news.json  tag.json
templates/: homepage.html  index.html  infinylink.html  logged.html  login.html  news_updater.html
